# sendbuilder

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  WORKFLOW_IMPLEMENTATION_GUIDE.md  csv_to_xpt_converter.py  csv_to_xpt_generator.py  define_xml_generator.py  domains.json  domainsbackup.json  manage.py  migrate_to_custom_user.py  pyproject.toml
ai/: admin.py  forms.py  models.py  urls.py  views.py
ai/migrations/: 0001_initial.py
ai/templates/ai/: ai_config.html  aiconfig_form.html  aimodel_form.html  aimodel_list.html
builder/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py  workflow_urls.py  workflow_views.py
builder/management/commands/: fix_studyid_usubjid.py  generate_structural_domains.py  load_domains.py
builder/migrations/: 0001_initial.py  0002_documentupload.py  0003_rename_studyconent_studycontent.py  0004_alter_extracteddomain_xpt_file_and_more.py  0005_extracteddomain_csv_file.py
builder/templates/base/: base.html
builder/templates/builder/: home.html  (+3 more)
builder/utils/: fast_domain_detector.py  patterns.py  pdf_processor.py  send_domain_detector copy.py  send_domain_detector.py  send_utils.py  send_validation.py  structural_domain_generator.py  workflow_services.py
fda_files/: data_specification.html  define.xml  study_summary.txt  validation_report.html
invividualdomain/: admin.py  apps.py  models.py
invividualdomain/migrations/: 0001_initial.py
sendbuilder/: asgi.py  settings.py  urls.py  wsgi.py
xpt_files/: BW.xpt  CL.xpt  DM.xpt  DS.xpt  EX.xpt  FW.xpt  MA.xpt  TA.xpt  TS.xpt  TS_DVKMEJA.xpt  TS_uXJO1VP.xpt
(+13 files in other folders)
